--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vdjclub",
+  "name": "vdj-club",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,17 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "lucide-react": "^0.561.0",
-    "recharts": "^3.5.1",
     "@google/genai": "^1.33.0",
-    "react-dom": "^19.2.3",
-    "firebase": "^12.6.0"
+    "firebase": "^10.8.0",
+    "lucide-react": "^0.344.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "recharts": "^2.12.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^18.2.56",
+    "@types/react-dom": "^18.2.19",
+    "@vitejs/plugin-react": "^4.2.1",
+    "typescript": "^5.2.2",
+    "vite": "^5.1.4"
   }
 }
